refactor: use List.of, add ping cmd